--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.5",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -20,7 +21,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^3.2.37",
-    "axios": "^1.7.2",
+    "axios": "1.7.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,7 +30,7 @@
     "embla-carousel-react": "^8.1.7",
     "lucide-react": "^0.417.0",
     "mongoose": "^8.5.1",
-    "next": "14.2.5",
+    "next": "14.2.10",
     "next-auth": "^4.24.7",
     "openai": "^4.53.2",
     "react": "^18",
